--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -4,10 +4,27 @@
  */
 
 .heroBanner {
-  padding: 4rem 0;
+  padding: 6rem 0;
   text-align: center;
   position: relative;
   overflow: hidden;
+  background-image: url("/img/banner.png");
+  background-size: cover;
+  background-position: center;
+}
+
+.card {
+  background-color: #f8f9fa;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  max-width: 100%;
+  margin-bottom: 2em;
+}
+
+.pdf_frame {
+    padding: 2rem 2rm;
+    text-align: center;
 }
 
 @media screen and (max-width: 996px) {
