--- a/src/components/HomeIntro/styles.module.css
+++ b/src/components/HomeIntro/styles.module.css
@@ -1,28 +1,7 @@
 .content {
   display: flex;
-  align-items: center;
-  padding: 2rem 6rem;
+
+  padding: 2rem;
+  margin: 2rem;
   width: 100%;
-}
-
-.contentSvg {
-  height: 200px;
-  width: 200px;
-}
-
-.dropCap p::first-letter {
-  font-size: 3rem;
-  font-weight: bold;
-  color: #000;
-  float: left;
-  margin-right: 8px;
-  line-height: 1;
-}
-
-.card {
-  background-color: #f8f9fa;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  max-width: 100%;
 }
