--- a/src/components/GlideCards/styles.module.css
+++ b/src/components/GlideCards/styles.module.css
@@ -25,9 +25,9 @@
 
 .card {
   background-color: #f8f9fa;
-  padding: 20px;
+  padding: 10px;
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   max-width: 100%;
-  margin-bottom: 2em;
+  margin-bottom: 20px;
 }
